use valid and slightly thinner playmat border to fix table layout on narrow screens

--- a/my-app/src/view/_style.css
+++ b/my-app/src/view/_style.css
@@ -82,9 +82,9 @@
 }
 
 .Playmat {
-  margin: 0.1%;
+  margin: 0.1em;
   border-style: solid;
-  border-width: 0.1%;
+  border-width: 0.1em;
   display: flex;
   flex-direction: row;
 }
